add write model
